@@ -189,10 +189,10 @@ enum dwarf_form
     DW_FORM_exprloc = 0x18,
     DW_FORM_flag_present = 0x19,
     DW_FORM_ref_sig8 = 0x20,
-    /* Extensions for Fission.  */
-    DW_FORM_GNU_ref_index = 0x70,
-    DW_FORM_GNU_addr_index = 0x71,
-    DW_FORM_GNU_str_index = 0x72
+    /* Extensions for Fission.  See http://gcc.gnu.org/wiki/DebugFission.  */
+    DW_FORM_GNU_ref_index = 0x1f00,
+    DW_FORM_GNU_addr_index = 0x1f01,
+    DW_FORM_GNU_str_index = 0x1f02
   };
 
 /* Attribute names and codes.  */
@@ -372,7 +372,7 @@ enum dwarf_attribute
     DW_AT_GNU_all_source_call_sites = 0x2118,
     /* Section offset into .debug_macro section.  */
     DW_AT_GNU_macros = 0x2119,
-    /* Extensions for Fission.  */
+    /* Extensions for Fission.  See http://gcc.gnu.org/wiki/DebugFission.  */
     DW_AT_GNU_dwo_name = 0x2130,
     DW_AT_GNU_dwo_id = 0x2131,
     DW_AT_GNU_ref_base = 0x2132,
